2007-12-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-kill-stray-processes): Do not kill
	process when the buffer associated to it is alive.
	(w3m-process-sentinel): Do not call a handler when its parent
	buffer have been killed.

2007-12-15  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-submit): Remove queey part from the from's
	action url when using get method.

2007-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-size): Change the value form into
	the cons of WIDTH and HEIGHT.
	(w3m-favicon-convert-args): New user option.
	(w3m-favicon-convert): Pass it to convert.

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Follow change of
	w3m-favicon-size.

2007-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-line): Set the background color of favicon
	for Emacs 22+.

	* w3m-favicon.el (w3m-favicon-set-image): Ditto.

	* w3m-image.el (w3m-imagick-convert-program-available-p): Check
	whether the convert program supports the image type png32 for
	Emacs 22+.
	(w3m-imagick-convert-buffer, w3m-imagick-start-convert-buffer):
	Use png32 if it is available.

2007-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-convert): Make last change revert.

2007-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-convert): Apply the background color
	of header line or mode line to pixels of which the color is
	transparent.

2007-12-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-goto-url): Canonicalize the url when it is called
	non-interactively.

2007-12-01  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-name-anchor-from-hist): New buffer-local variable.
	(w3m-clear-local-variables): Also clear w3m-name-anchor-from-hist.
	(w3m-goto-url): Save and restoe w3m-name-anchor-from-hist.
	(w3m-search-name-anchor): Record (point)s of before and after
	following a name-anchor.
	(w3m-view-previous-page): If possible, move back the cursor to the